added jbake-cli as java library used by jbake-app to bundle distribution.